[project]
name = "loa-extra-message-price-calc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "quojama", email = "giantkoyama@gmail.com" }
]
dependencies = [
    "flask>=2.3.3",
    "vercel>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
